добавление формы для помещения

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -170,3 +170,8 @@ h3 {
     margin: 30px auto; /* Центрирование по горизонтали */
     text-align: center; /* Центрирование содержимого */
 }
+/*.block{*/
+
+/*    display: flex;*/
+/*    gap: 100px;*/
+/*}*/
